fix delete endpoint
